# Game

./: .ccls  .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .nvim.lua  .pre-commit-config.yaml  .stylua.toml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODESTYLE.md  CPPCODESTYLE.md  LUACODESTYLE.md  Makefile  README.md  TASKS.md  conf.json  devenv.nix  game  game.lua  iwyu.imp  main.lua  shell.nix
.claude/skills/task/: SKILL.md
.direnv/: nix-profile-.1135.9b5328b7f761  nix-profile-.1135.9b5328b7f761.rc
.github/workflows/: build.yml  cmake-multi-platform.yml
assets/: .luarc.json  .nvim.lua  basic.frag  blur.frag  bullet.lua  collision_groups.lua  conf.json  conf.lua  crt.frag  entity.lua  fennel.lua  flappybird.fnl  font_test.lua  game.fnl  jill.qoi  lume.lua  main.fnl  main.lua  messages.proto  meteor.lua  physics.lua  pixelate.frag  player.lua  pong.fnl  powerup.lua  queue.fnl  random.lua  renderertest.fnl  server.lua  sheet.sprites  sheet.xml  sheet2.qoi  sheet2.sprites  sheet2.xml  starfield.lua  template.fnl  testBenchmark.lua  testEasingCurves.lua  testEasingParade.lua  testEasingShowcase.lua  (+48 more)
assets/definitions/: game.lua
cmake/: EmbedFile.cmake  EmbedProtoc.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  emscripten-wasm32.cmake  macos-arm64.cmake  macos-x86_64.cmake  mingw-w64-x86_64.cmake
definitions/: game.lua
design/: AI utilities.md  Animation system.md  Asset conversion tools.md  Asset system improvements.md  Asset system.md  Audio features.md  BYTEPATH and SNKRX porting analysis.md  Bug fixes and minor improvements.md  CLI workflow.md  CMake and CTest improvements.md  CPU sampling profiler.md  Camera system.md  Collision detection system.md  Content-addressed asset storage.md  Cross compilation.md  Debug UI.md  Debug logging system.md  Debug printing consolidation.md  Draw call optimization.md  Engine comparison.md  ErrorOr and TRY macro.md  File watching and hot reload.md  Filesystem API.md  Font system bug fixes.md  Font system.md  Game module refactor.md  Index.md  Input action binding.md  LLM ergonomics.md  Layer and canvas system.md  Lua API for LSP and LLMs.md  LuaJIT Migration.md  Memory allocators for third-party libraries.md  Module memory budgets.md  Multiplatform support.md  Networking.md  Particle system.md  Physics system expansion.md  Potential features.md  Profiling and tracing.md  (+25 more)
design/.obsidian/: workspace.json
design/.trash/: Graphics system.md
games/flappybird/: .luarc.json  README.md  conf.json  die.qoa  flappy.qoi  flappy.sprites.json  game.lua  hit.qoa  point.qoa  swoosh.qoa  wing.qoa
games/flappybird/definitions/: game.lua
games/platformer/: .luarc.json  conf.json  game.lua  player.sprites.json  tilemap_packed.qoi  tileset-characters.tsx  tileset-tiles.tsx
games/platformer/definitions/: game.lua
games/platformer/player.sprites/: atlas.qoi  atlas.sprites.json
games/space-garbage/: bomb.lua  bomber.lua  bullet.lua  collision_groups.lua  conf.json  enemy.lua  enemy_bullet.lua  entity.lua  fsm.lua  game.lua  highscores.lua  main.lua  meteor.lua  physics.lua  player.lua  powerup.lua  scores.lua  sheet.qoi  sheet.sprites.json  sheet2.sprites.json  steer.lua  timer.lua  turret.lua
games/space-garbage/definitions/: game.lua
include/: allocators.h  array.h  assets.h  circular_buffer.h  clock.h  console.h  debug_font.h  debug_ui.h  fonts.h  glad.h  input.h  logging.h  lookup_table.h  lua.h  lua_setup.h  map.h  mat.h  physics.h  qoi.h  renderer.h  sound.h  stats.h  stb_image.h  stb_truetype.h  strings.h  vec.h
libraries/: backward.cc  backward.cpp  backward.h  backward.hpp  dr_wav.h  enet.h  glad.cc  glad.h  json.cc  json.cpp  json.h  jtckdint.h  pcg_extras.h  pcg_random.h  pugiconfig.h  pugixml.cc  qoi.h  stb_image.h  stb_image_all.cc  stb_truetype.cc  stb_truetype.h  stb_vorbis.cc  stb_vorbis.h
libraries/box2d-old/testbed/: imgui_impl_glfw.cpp  main.cpp
libraries/double-conversion/: bignum-dtoa.cc  bignum.cc  bignum.h  cached-powers.cc  cached-powers.h  diy-fp.h  double-to-string.cc  double-to-string.h  fast-dtoa.cc  fast-dtoa.h  fixed-dtoa.cc  fixed-dtoa.h  ieee.h  string-to-double.cc  string-to-double.h  strtod.cc  utils.h
libraries/imgui/: CMakeLists.txt
libraries/lua/: CMakeLists.txt
libraries/lua-protobuf/: lua_pb.h
libraries/lua/src/: lauxlib.c  ldebug.c  llex.c  ltable.c
libraries/mimalloc/: CMakeLists.txt
libraries/physfs/: CMakeLists.txt
libraries/rapidhash/: rapidhash.h  secret.h
libraries/text_editor/: CMakeLists.txt
scripts/: bin2header.py  convert_colors.py  donotsubmit.sh  fnlfmt  fnlfmt.bat  game-build-web.sh  game-build-win64.sh  game-build.sh  game-clean.sh  game-debug.sh  game-format.sh  game-include-cleaner.sh  game-open-db.sh  game-profile.sh  game-reset-db.sh  game-run.sh  game-samply.sh  game-sanitize.sh  game-sfx-win64.sh  game-test.sh  game-tidy.sh  install-deps.sh  matrices.py  run-clang-tidy.sh  run-iwyu.sh  samply-summary.py  setup-7z-sfx.sh  setup-mingw-toolchain.sh  setup-osxcross-toolchain.sh  spritesheet_convert.py  vectors.py
scripts/web/: index.html  serve.py  shell.html
src/: actions.cc  actions.h  allocators.cc  allocators.h  array.h  assets.cc  assets.fbs  assets.h  assets_generated.h  bits.h  blob_store.cc  blob_store.h  camera.cc  camera.h  circular_buffer.h  cli.h  cli_metadata.cc  cli_metadata.h  clock.cc  clock.h  cmd_atlas.cc  cmd_clean.cc  cmd_completions.cc  cmd_convert.cc  cmd_help.cc  cmd_init.cc  cmd_package.cc  cmd_run.cc  cmd_stubs.cc  cmd_version.cc  collision.cc  collision.h  collision_world.cc  collision_world.h  color.cc  color.h  config.cc  config.h  console.cc  console.h  (+180 more)
tests/: CMakeLists.txt  gport-shim.h  test.cc  test_actions.cc  test_allocators.cc  test_bits.cc  test_blob_store.cc  test_collision.cc  test_color.cc  test_containers.cc  test_error.cc  test_executor.cc  test_fixture.h  test_math.cc  test_packer.cc  test_particles.cc  test_platform.cc  test_qoa.cc  test_save.cc  test_stats.cc  test_stringlib.cc  test_strings.cc  test_touch.cc  test_transformations.cc  test_xml.cc  test_zip_writer.cc
(+243 files in other folders)
